--- a/server/package.json
+++ b/server/package.json
@@ -1,24 +1,25 @@
 {
   "name": "mern-server",
   "version": "1.0.0",
-  "description": "Server side of the App",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js",
+    "watch": "nodemon",
     "seed": "node seeders/seed.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "apollo-server": "^3.6.2",
+    "apollo-server-express": "^3.6.2",
     "bcrypt": "^5.0.0",
-    "cors": "^2.8.5",
-    "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "graphql": "^16.3.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^7.0.2"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.3"
   }
 }
